--- a/HelloGapTest/src/html/index.html
+++ b/HelloGapTest/src/html/index.html
@@ -37,6 +37,8 @@
 		    </div>
 		    <div class="clear"></div>
 		    <div id="listePoids" class="tripleColonnes"></div>
+		    <div class="clear"></div>
+		    <label id="poidsTotal">Poids total : <div></div></label>
 	    </div>
     </div>
     
