Commit avant dodo

--- a/HelloGap/assets/www/html/index.html
+++ b/HelloGap/assets/www/html/index.html
@@ -7,12 +7,14 @@
 
     <script type="text/javascript" charset="utf-8" src="../js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="../js/formulaire.js" defer></script>
+    <script type="text/javascript" charset="utf-8" src="../js/chargement.js" defer></script>
     <script type="text/javascript" charset="utf-8" src="../js/cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="../js/camera.js"></script>
     <script type="text/javascript" charset="utf-8" src="../js/email.js"></script>
 	
   </head>
   <body>
+  	<div id="chargement"><img id="img-loading" src="../img/ajax-loading.gif"/></div>
   
     <!-- Infomations client -->
     <label>Nom du client :</label>
