--- a/HelloGapTest/src/html/index.html
+++ b/HelloGapTest/src/html/index.html
@@ -7,6 +7,7 @@
 
     <script type="text/javascript" charset="utf-8" src="../js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="../js/formulaire.js" defer></script>
+    <script type="text/javascript" charset="utf-8" src="../js/chargement.js" defer></script>
 	<script>
 		function doEmail() {
 			window.EmailComposer.prototype.send("My message body", url);
@@ -15,7 +16,8 @@
 	
   </head>
   <body>
-  
+  	<div id="chargement"><img id="img-loading" src="../img/ajax-loading.gif"/></div>
+  	
     <!-- Infomations client -->
     <label>Nom du client :</label>
     <input type="text" id="clientName"/>
