Correction de la CSS

--- a/HelloGapTest/src/html/index.html
+++ b/HelloGapTest/src/html/index.html
@@ -94,7 +94,7 @@
 				<button onclick="capturePhoto();">Photo</button>
 				<!-- <button class="right" onclick="getPhoto(pictureSource.PHOTOLIBRARY);">Choisir une photo...</button> -->
 
-				<img style="" id="image" src="http://cdn.livetvstatic.ru/img/teams/fullsize/94.gif" />
+				<img style="" id="image" src="http://chezfanfan.c.h.pic.centerblog.net/84u8fwiy.jpg" />
 				
 				<button id="send">Envoyer</button>
 			</div>
