--- a/HelloGap/assets/www/html/index.html
+++ b/HelloGap/assets/www/html/index.html
@@ -4,20 +4,23 @@
 		<meta charset="utf-8" />
 	 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	   
-	   <title>Capture Photo</title>
+		<title>Capture Photo</title>
 	
-	   <link type="text/css" href="../css/style.css" rel="stylesheet" rel="stylesheet" media="all" />
-	   <link type="text/css" href="../css/mobiscroll.custom-2.6.2.min.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="../css/style.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="../css/mobiscroll.custom-2.6.2.min.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="../css/jquery-ui.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" media="all" />
 	
-	   <script type="text/javascript" charset="utf-8" src="../js/jquery-1.10.2.min.js"></script>
-	   <script type="text/javascript" charset="utf-8" src="../js/mobiscroll.custom-2.6.2.min.js"></script>
-	   <script type="text/javascript" charset="utf-8" src="../js/tools.js"></script>
-	   <script type="text/javascript" charset="utf-8" src="../js/cordova.js"></script>
-	   <script type="text/javascript" charset="utf-8" src="../js/camera.js"></script>
-	   <script type="text/javascript" charset="utf-8" src="../js/email.js"></script>
-	   <script type="text/javascript" charset="utf-8" src="../js/formulaire.js" defer></script>
-	   <script type="text/javascript" charset="utf-8" src="../js/chargement.js" defer></script>
-	   <script type="text/javascript" charset="utf-8" src="../js/menu.js" defer></script>
+		<script type="text/javascript" charset="utf-8" src="../js/jquery-1.10.2.min.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../js/jquery-ui.min.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../js/mobiscroll.custom-2.6.2.min.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../js/tools.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../js/cordova.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../js/camera.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../js/email.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../js/formulaire.js" defer></script>
+		<script type="text/javascript" charset="utf-8" src="../js/chargement.js" defer></script>
+		<script type="text/javascript" charset="utf-8" src="../js/menu.js" defer></script>
 
 	</head>
 	
