--- a/HelloGapTest/src/html/index.html
+++ b/HelloGapTest/src/html/index.html
@@ -8,9 +8,11 @@
 
 	<link type="text/css" href="../css/style.css" rel="stylesheet" media="all" />
 	<link type="text/css" href="../css/mobiscroll.custom-2.6.2.min.css" rel="stylesheet" media="all" />
+	<link type="text/css" href="../css/jquery-ui.css" rel="stylesheet" media="all" />
 	<link type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" media="all" />
 
 	<script type="text/javascript" charset="utf-8" src="../js/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" charset="utf-8" src="../js/jquery-ui.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="../js/mobiscroll.custom-2.6.2.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="../js/tools.js"></script>
 	<script type="text/javascript" charset="utf-8" src="../js/formulaire.js" defer></script>
