Autocomplete avec données sur un serveur distant

--- a/HelloGapTest/src/html/index.html
+++ b/HelloGapTest/src/html/index.html
@@ -24,6 +24,7 @@
 	</head>
 	
 	<body>
+		<div id="ttt"></div>
 		<div id="chargement"><img id="img-loading" src="../img/ajax-loading.gif"/></div>
 
 		<!-- Header -->
