enregistrement des produits "stocks" en base + auto complétion avec ces données

--- a/HelloGapTest/src/html/index.html
+++ b/HelloGapTest/src/html/index.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" charset="utf-8" src="../js/mobiscroll.custom-2.6.2.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="../js/tools.js"></script>
 	<script type="text/javascript" charset="utf-8" src="../js/formulaire.js" defer></script>
+	<script type="text/javascript" charset="utf-8" src="../js/stock.js" defer></script>
 	<script type="text/javascript" charset="utf-8" src="../js/chargement.js" defer></script>
 	<script type="text/javascript" charset="utf-8" src="../js/menu.js" defer></script>
 
@@ -37,15 +38,38 @@
 		<!-- Page Menu -->
 		<div id="pageMenu"></div>
 		
-		<div class="content" style="display:none" data-onglet="stock">
-			stock !!
+		<div class="content" style="display:none" id="stock">
+			
+			<!-- Nombre de produits en stock -->
+			<label class="labelLeft">Nombre de produits :</label>
+			<input type="text" id="stockQuantity"/>
+			
+			<div class="clear"></div>
+			
+			<!--
+			<div class="lineProduct">
+				<div class="left large">
+					<span>Nom du produit :</span>
+				</div>
+				<div class="right small">
+					<span style="float: right;">Quantité :</span>
+				</div>
+				<div class="left large">
+					<input type="text" class="product"/>
+				</div>
+				<div class="right small">
+					<input type="text" class="quantity" style="text-align:right;" />
+				</div>
+			</div>
+			-->
+
 		</div>
 		
-		<div class="content" style="display:none" data-onglet="historique">
+		<div class="content" style="display:none" id="historique">
 			historique !!
 		</div>
 		
-		<div class="content" data-onglet="preparation">
+		<div class="content" id="preparation">
 		
 			<!-- Infomations client -->
 			<label>Client :</label>
@@ -95,13 +119,24 @@
 			<div class="barre"></div>
 		</div>
 		<div id="colonne">
-			<div id="contentColonne">
-				<button onclick="capturePhoto();">Photo</button>
-				<!-- <button class="right" onclick="getPhoto(pictureSource.PHOTOLIBRARY);">Choisir une photo...</button> -->
-
-				<a style="" href="http://chezfanfan.c.h.pic.centerblog.net/84u8fwiy.jpg" id="image" class="image"><img src="http://chezfanfan.c.h.pic.centerblog.net/84u8fwiy.jpg" /></a>
-				
-				<button id="send">Envoyer</button>
+			<!-- Colonne préparation -->
+			<div class="typeColonne" id="preparationColonne">
+				<div id="contentColonne">
+					<button onclick="capturePhoto();">Photo</button>
+					<!-- <button class="right" onclick="getPhoto(pictureSource.PHOTOLIBRARY);">Choisir une photo...</button> -->
+	
+					<a style="" href="http://chezfanfan.c.h.pic.centerblog.net/84u8fwiy.jpg" id="image" class="image"><img src="http://chezfanfan.c.h.pic.centerblog.net/84u8fwiy.jpg" /></a>
+					
+					<button id="send">Envoyer</button>
+				</div>
+			</div>
+			
+			
+			<!-- Colonne stock -->
+			<div class="typeColonne" id="stockColonne" style="display:none">
+				<div id="contentColonne">
+					<button id="sendStock">Envoyer</button>
+				</div>
 			</div>
 		</div>
 		
